<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_establishments_map">

    <fragment
            android:id="@+id/navigation_establishments_map"
            android:name="com.example.dealfinderapp_v3.ui.map.EstablishmentsMapFragment"
            android:label="@string/title_home"
            tools:layout="@layout/establishments_map"/>

    <fragment
            android:id="@+id/navigation_my_promotions"
            android:name="com.example.dealfinderapp_v3.ui.myPromotions.MyPromotionsFragment"
            android:label="@string/title_my_promotions"
            tools:layout="@layout/fragment_my_promotions"/>

    <fragment
            android:id="@+id/navigation_profile"
            android:name="com.example.dealfinderapp_v3.ui.profile.ProfileFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/fragment_profile"/>
</navigation>